Fix page title color on small screens.

--- a/hornet/static/scss/blocks/nav/low/nav.scss
+++ b/hornet/static/scss/blocks/nav/low/nav.scss
@@ -23,6 +23,7 @@ nav {
         line-height: 35px;
         margin-left: 1px;
         padding-bottom: 2px;
+        color: #FFF;
     }
 
     a {
