--- a/hornet/static/scss/blocks/nav/medium/nav.scss
+++ b/hornet/static/scss/blocks/nav/medium/nav.scss
@@ -12,6 +12,7 @@ nav {
         font-size: 32px;
         line-height: 40px;
         margin-left: 30px;
+        color: #000;
     }
 
     a {
